gen/compiladorFinalParser.py
# Generated from /Users/rodrigoelyel/Desktop/compiladores/compiladorFinal.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class compiladorFinalParser ( Parser ):

    grammarFileName = "compiladorFinal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'()'", "'{'", "'}'", "';'", "'='", "','", 
                     "'('", "')'", "':'", "'>'", "'<'", "'<='", "'>='", 
                     "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'or'", 
                     "'and'", "'not'", "'for'", "'break'", "'if'", "'else'", 
                     "'do'", "'while'", "'in'", "'def'", "'main'", "'return'", 
                     "'void'", "<INVALID>", "'print'", "'input'", "'range'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "OR", "AND", "NOT", "FOR", "BREAK", "IF", "ELSE", 
                      "DO", "WHILE", "IN", "DEF", "MAIN", "RETURN", "VOID", 
                      "TYPE", "PRINT", "INPUT", "RANGE", "INT_VALUE", "FLOAT_VALUE", 
                      "STR_VALUE", "BOOL_VALUE", "ID", "WS" ]

    RULE_prog = 0
    RULE_blockMain = 1
    RULE_block = 2
    RULE_blockVoid = 3
    RULE_decVars = 4
    RULE_decFunctions = 5
    RULE_func_return = 6
    RULE_func_for = 7
    RULE_func_do_while = 8
    RULE_func_break = 9
    RULE_func_if = 10
    RULE_func_else = 11
    RULE_func_print = 12
    RULE_function_call = 13
    RULE_assigment = 14
    RULE_expr = 15
    RULE_term = 16
    RULE_term2 = 17
    RULE_term3 = 18
    RULE_term4 = 19
    RULE_term5 = 20
    RULE_term6 = 21
    RULE_factor = 22

    ruleNames =  [ "prog", "blockMain", "block", "blockVoid", "decVars", 
                   "decFunctions", "func_return", "func_for", "func_do_while", 
                   "func_break", "func_if", "func_else", "func_print", "function_call", 
                   "assigment", "expr", "term", "term2", "term3", "term4", 
                   "term5", "term6", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    OR=20
    AND=21
    NOT=22
    FOR=23
    BREAK=24
    IF=25
    ELSE=26
    DO=27
    WHILE=28
    IN=29
    DEF=30
    MAIN=31
    RETURN=32
    VOID=33
    TYPE=34
    PRINT=35
    INPUT=36
    RANGE=37
    INT_VALUE=38
    FLOAT_VALUE=39
    STR_VALUE=40
    BOOL_VALUE=41
    ID=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockMain(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockMainContext,0)


        def decVars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladorFinalParser.DecVarsContext)
            else:
                return self.getTypedRuleContext(compiladorFinalParser.DecVarsContext,i)


        def decFunctions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladorFinalParser.DecFunctionsContext)
            else:
                return self.getTypedRuleContext(compiladorFinalParser.DecFunctionsContext,i)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = compiladorFinalParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==compiladorFinalParser.TYPE:
                self.state = 46
                self.decVars()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 52
                    self.decFunctions() 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 58
            self.blockMain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockMainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(compiladorFinalParser.DEF, 0)

        def MAIN(self):
            return self.getToken(compiladorFinalParser.MAIN, 0)

        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_blockMain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockMain" ):
                listener.enterBlockMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockMain" ):
                listener.exitBlockMain(self)




    def blockMain(self):

        localctx = compiladorFinalParser.BlockMainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockMain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(compiladorFinalParser.DEF)
            self.state = 61
            self.match(compiladorFinalParser.MAIN)
            self.state = 62
            self.match(compiladorFinalParser.T__0)
            self.state = 63
            self.match(compiladorFinalParser.T__1)
            self.state = 64
            self.block()
            self.state = 65
            self.match(compiladorFinalParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_for(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_forContext,0)


        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def func_break(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_breakContext,0)


        def func_do_while(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_do_whileContext,0)


        def func_if(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_ifContext,0)


        def func_else(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_elseContext,0)


        def func_print(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_printContext,0)


        def assigment(self):
            return self.getTypedRuleContext(compiladorFinalParser.AssigmentContext,0)


        def function_call(self):
            return self.getTypedRuleContext(compiladorFinalParser.Function_callContext,0)


        def func_return(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_returnContext,0)


        def decVars(self):
            return self.getTypedRuleContext(compiladorFinalParser.DecVarsContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = compiladorFinalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.func_for()
                self.state = 68
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.func_break()
                self.state = 71
                self.block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.func_do_while()
                self.state = 74
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.func_if()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==compiladorFinalParser.ELSE:
                    self.state = 77
                    self.func_else()


                self.state = 80
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.func_print()
                self.state = 83
                self.block()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.assigment()
                self.state = 86
                self.block()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.function_call()
                self.state = 89
                self.match(compiladorFinalParser.T__3)
                self.state = 90
                self.block()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 92
                self.func_return()
                self.state = 93
                self.block()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.decVars()
                self.state = 96
                self.block()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockVoidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_for(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_forContext,0)


        def blockVoid(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockVoidContext,0)


        def func_break(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_breakContext,0)


        def func_do_while(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_do_whileContext,0)


        def func_if(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_ifContext,0)


        def func_else(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_elseContext,0)


        def func_print(self):
            return self.getTypedRuleContext(compiladorFinalParser.Func_printContext,0)


        def assigment(self):
            return self.getTypedRuleContext(compiladorFinalParser.AssigmentContext,0)


        def function_call(self):
            return self.getTypedRuleContext(compiladorFinalParser.Function_callContext,0)


        def decVars(self):
            return self.getTypedRuleContext(compiladorFinalParser.DecVarsContext,0)


        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_blockVoid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockVoid" ):
                listener.enterBlockVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockVoid" ):
                listener.exitBlockVoid(self)




    def blockVoid(self):

        localctx = compiladorFinalParser.BlockVoidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blockVoid)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.func_for()
                self.state = 102
                self.blockVoid()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.func_break()
                self.state = 105
                self.blockVoid()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.func_do_while()
                self.state = 108
                self.blockVoid()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 110
                self.func_if()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==compiladorFinalParser.ELSE:
                    self.state = 111
                    self.func_else()


                self.state = 114
                self.blockVoid()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.func_print()
                self.state = 117
                self.blockVoid()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 119
                self.assigment()
                self.state = 120
                self.blockVoid()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 122
                self.function_call()
                self.state = 123
                self.match(compiladorFinalParser.T__3)
                self.state = 124
                self.blockVoid()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 126
                self.decVars()
                self.state = 127
                self.block()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(compiladorFinalParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorFinalParser.ID)
            else:
                return self.getToken(compiladorFinalParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladorFinalParser.ExprContext)
            else:
                return self.getTypedRuleContext(compiladorFinalParser.ExprContext,i)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_decVars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecVars" ):
                listener.enterDecVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecVars" ):
                listener.exitDecVars(self)




    def decVars(self):

        localctx = compiladorFinalParser.DecVarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decVars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(compiladorFinalParser.TYPE)
            self.state = 133
            self.match(compiladorFinalParser.ID)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==compiladorFinalParser.T__4:
                self.state = 134
                self.match(compiladorFinalParser.T__4)
                self.state = 135
                self.expr(0)


            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==compiladorFinalParser.T__5:
                self.state = 138
                self.match(compiladorFinalParser.T__5)
                self.state = 139
                self.match(compiladorFinalParser.ID)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==compiladorFinalParser.T__4:
                    self.state = 140
                    self.match(compiladorFinalParser.T__4)
                    self.state = 141
                    self.expr(0)


                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(compiladorFinalParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(compiladorFinalParser.DEF, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorFinalParser.ID)
            else:
                return self.getToken(compiladorFinalParser.ID, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorFinalParser.TYPE)
            else:
                return self.getToken(compiladorFinalParser.TYPE, i)

        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def VOID(self):
            return self.getToken(compiladorFinalParser.VOID, 0)

        def blockVoid(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockVoidContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_decFunctions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecFunctions" ):
                listener.enterDecFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecFunctions" ):
                listener.exitDecFunctions(self)




    def decFunctions(self):

        localctx = compiladorFinalParser.DecFunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decFunctions)
        self._la = 0 # Token type
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(compiladorFinalParser.DEF)
                self.state = 152
                self.match(compiladorFinalParser.ID)
                self.state = 153
                self.match(compiladorFinalParser.T__6)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==compiladorFinalParser.TYPE:
                    self.state = 154
                    self.match(compiladorFinalParser.TYPE)
                    self.state = 155
                    self.match(compiladorFinalParser.ID)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==compiladorFinalParser.T__5:
                        self.state = 156
                        self.match(compiladorFinalParser.T__5)
                        self.state = 157
                        self.match(compiladorFinalParser.TYPE)
                        self.state = 158
                        self.match(compiladorFinalParser.ID)
                        self.state = 163
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 166
                self.match(compiladorFinalParser.T__7)
                self.state = 167
                self.match(compiladorFinalParser.TYPE)
                self.state = 168
                self.match(compiladorFinalParser.T__1)
                self.state = 169
                self.block()
                self.state = 170
                self.match(compiladorFinalParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(compiladorFinalParser.DEF)
                self.state = 173
                self.match(compiladorFinalParser.ID)
                self.state = 174
                self.match(compiladorFinalParser.T__6)
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==compiladorFinalParser.TYPE:
                    self.state = 175
                    self.match(compiladorFinalParser.TYPE)
                    self.state = 176
                    self.match(compiladorFinalParser.ID)
                    self.state = 182
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==compiladorFinalParser.T__5:
                        self.state = 177
                        self.match(compiladorFinalParser.T__5)
                        self.state = 178
                        self.match(compiladorFinalParser.TYPE)
                        self.state = 179
                        self.match(compiladorFinalParser.ID)
                        self.state = 184
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 187
                self.match(compiladorFinalParser.T__7)
                self.state = 188
                self.match(compiladorFinalParser.VOID)
                self.state = 189
                self.match(compiladorFinalParser.T__1)
                self.state = 190
                self.blockVoid()
                self.state = 191
                self.match(compiladorFinalParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_returnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(compiladorFinalParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(compiladorFinalParser.ExprContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_func_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_return" ):
                listener.enterFunc_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_return" ):
                listener.exitFunc_return(self)




    def func_return(self):

        localctx = compiladorFinalParser.Func_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(compiladorFinalParser.RETURN)
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladorFinalParser.T__6) | (1 << compiladorFinalParser.T__16) | (1 << compiladorFinalParser.NOT) | (1 << compiladorFinalParser.INT_VALUE) | (1 << compiladorFinalParser.FLOAT_VALUE) | (1 << compiladorFinalParser.STR_VALUE) | (1 << compiladorFinalParser.BOOL_VALUE) | (1 << compiladorFinalParser.ID))) != 0):
                self.state = 196
                self.expr(0)


            self.state = 199
            self.match(compiladorFinalParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_forContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.idx = None

        def FOR(self):
            return self.getToken(compiladorFinalParser.FOR, 0)

        def ID(self):
            return self.getToken(compiladorFinalParser.ID, 0)

        def IN(self):
            return self.getToken(compiladorFinalParser.IN, 0)

        def RANGE(self):
            return self.getToken(compiladorFinalParser.RANGE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladorFinalParser.ExprContext)
            else:
                return self.getTypedRuleContext(compiladorFinalParser.ExprContext,i)


        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_func_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_for" ):
                listener.enterFunc_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_for" ):
                listener.exitFunc_for(self)




    def func_for(self):

        localctx = compiladorFinalParser.Func_forContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(compiladorFinalParser.FOR)
            self.state = 202
            self.match(compiladorFinalParser.ID)
            self.state = 203
            self.match(compiladorFinalParser.IN)
            self.state = 204
            self.match(compiladorFinalParser.RANGE)
            self.state = 205
            self.match(compiladorFinalParser.T__6)
            self.state = 206
            self.expr(0)
            self.state = 207
            self.match(compiladorFinalParser.T__8)
            self.state = 208
            self.expr(0)
            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==compiladorFinalParser.T__8:
                self.state = 209
                self.match(compiladorFinalParser.T__8)
                self.state = 210
                self.expr(0)


            self.state = 213
            self.match(compiladorFinalParser.T__7)
            self.state = 214
            self.match(compiladorFinalParser.T__1)
            self.state = 215
            self.block()
            self.state = 216
            self.match(compiladorFinalParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_do_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(compiladorFinalParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def WHILE(self):
            return self.getToken(compiladorFinalParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(compiladorFinalParser.ExprContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_func_do_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_do_while" ):
                listener.enterFunc_do_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_do_while" ):
                listener.exitFunc_do_while(self)




    def func_do_while(self):

        localctx = compiladorFinalParser.Func_do_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_do_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            self.match(compiladorFinalParser.DO)
            self.state = 219
            self.match(compiladorFinalParser.T__1)
            self.state = 220
            self.block()
            self.state = 221
            self.match(compiladorFinalParser.T__2)
            self.state = 222
            self.match(compiladorFinalParser.WHILE)
            self.state = 223
            self.expr(0)
            self.state = 224
            self.match(compiladorFinalParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_breakContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(compiladorFinalParser.BREAK, 0)

        def getRuleIndex(self):
            return compiladorFinalParser.RULE_func_break

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_break" ):
                listener.enterFunc_break(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_break" ):
                listener.exitFunc_break(self)




    def func_break(self):

        localctx = compiladorFinalParser.Func_breakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_break)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 226
            self.match(compiladorFinalParser.BREAK)
            self.state = 227
            self.match(compiladorFinalParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_ifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(compiladorFinalParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(compiladorFinalParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(compiladorFinalParser.BlockContext,0)


        def getRuleIndex(self):
            return compiladorFinalParser.RULE_func_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_if" ):
                listener.enterFunc_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_if" ):
                listener.exitFunc_if(self)




    def func_if(self):
